:construction: Remote job commit 39

--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -504,7 +504,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9766ae85c86647d989bfba7a9a67ded2",
+       "model_id": "08c8e679e8e1459a8f8b9340c52470f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1141,7 +1141,7 @@
       "  08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 20/08/2025 | 25/08/202...\n",
       "\n",
       "LINE_ITEM_DESCRIPTIONS:\n",
-      "  Card Purchase K MART | ATM Withdrawal WESTPAC ATM | Contactless Payment BUNNINGS | EFTPOS Purchase W...\n",
+      "  Card Purchase K MART Perth WA | ATM Withdrawal WESTPAC ATM Perth WA | Contactless Payment BUNNINGS C...\n",
       "\n",
       "TRANSACTION_AMOUNTS_PAID:\n",
       "  $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $342.06 | $1077.60 | $437.75 | $1724.98 | $1992....\n",
@@ -1211,16 +1211,16 @@
       "============================================================\n",
       "DEBIT TRANSACTIONS\n",
       "============================================================\n",
-      "1. [08/08/2025] Card Purchase K MART - $1488.27\n",
-      "2. [08/08/2025] ATM Withdrawal WESTPAC ATM - $79.00\n",
-      "3. [09/08/2025] Contactless Payment BUNNINGS - $850.65\n",
-      "4. [15/08/2025] EFTPOS Purchase WOOLWORTHS - $1215.38\n",
+      "1. [08/08/2025] Card Purchase K MART Perth WA - $1488.27\n",
+      "2. [08/08/2025] ATM Withdrawal WESTPAC ATM Perth WA - $79.00\n",
+      "3. [09/08/2025] Contactless Payment BUNNINGS Canberra ACT - $850.65\n",
+      "4. [15/08/2025] EFTPOS Purchase WOOLWORTHS Sydney NSW - $1215.38\n",
       "5. [15/08/2025] Direct Debit ACME CORP PTY LTD - $1662.22\n",
-      "6. [18/08/2025] EFTPOS Purchase WOOLWORTHS - $342.06\n",
-      "7. [20/08/2025] EFTPOS Purchase COLES SUPERMARKET - $1077.60\n",
-      "8. [25/08/2025] Insurance Premium AGL - $437.75\n",
-      "9. [30/08/2025] ATM Withdrawal WESTPAC ATM - $1724.98\n",
-      "10. [30/08/2025] Subscription Spotify - $1992.32\n"
+      "6. [18/08/2025] EFTPOS Purchase WOOLWORTHS Hobart TAS - $342.06\n",
+      "7. [20/08/2025] EFTPOS Purchase COLES SUPERMARKET Perth WA - $1077.60\n",
+      "8. [25/08/2025] Insurance Premium AGL Policy 95909FP7706585 - $437.75\n",
+      "9. [30/08/2025] ATM Withdrawal WESTPAC ATM Brisbane QLD - $1724.98\n",
+      "10. [30/08/2025] Subscription Spotify Monthly 82512P11540956 - $1992.32\n"
      ]
     }
    ],
@@ -1279,7 +1279,7 @@
       "✅ OK     DOCUMENT_TYPE                   100.0%  100.0%  100.0%\n",
       "✅ OK     STATEMENT_DATE_RANGE            100.0%  100.0%  100.0%\n",
       "✅ OK     TRANSACTION_DATES               100.0%  100.0%  100.0%\n",
-      "❌ FAIL   LINE_ITEM_DESCRIPTIONS           18.2%  100.0%   10.0%\n",
+      "⚠️ PART  LINE_ITEM_DESCRIPTIONS           88.9%  100.0%   80.0%\n",
       "✅ OK     TRANSACTION_AMOUNTS_PAID        100.0%  100.0%  100.0%\n",
       "------------------------------------------------------------------------------------------\n",
       "\n",
@@ -1299,7 +1299,7 @@
       "  Ground Truth: 08/08/2025 | 08/08/2025 | 09/08/2025 | 15/08/2025 | 15/08/2025 | 18/08/2025 | 20/08/2025 | 25/08/2025 | 30/08/2025 | 30/08/2025\n",
       "\n",
       "LINE_ITEM_DESCRIPTIONS:\n",
-      "  Extracted:    Card Purchase K MART | ATM Withdrawal WESTPAC ATM | Contactless Payment BUNNINGS | EFTPOS Purchase WOOLWORTHS | Direct Debit ACME CORP PTY LTD | EFTPOS Purchase WOOLWORTHS | EFTPOS Purchase COLES SUPERMARKET | Insurance Premium AGL | ATM Withdrawal WESTPAC ATM | Subscription Spotify\n",
+      "  Extracted:    Card Purchase K MART Perth WA | ATM Withdrawal WESTPAC ATM Perth WA | Contactless Payment BUNNINGS Canberra ACT | EFTPOS Purchase WOOLWORTHS Sydney NSW | Direct Debit ACME CORP PTY LTD | EFTPOS Purchase WOOLWORTHS Hobart TAS | EFTPOS Purchase COLES SUPERMARKET Perth WA | Insurance Premium AGL Policy 95909FP7706585 | ATM Withdrawal WESTPAC ATM Brisbane QLD | Subscription Spotify Monthly 82512P11540956\n",
       "  Ground Truth: Card Purchase KMART PERTH WA | ATM Withdrawal WESTPAC ATM PERTH WA | Contactless Payment BUNNINGS CANBERRA ACT | EFTPOS Purchase WOOLWORTHS SYDNEY NSW | Direct Debit ACME CORP PTY LTD Ref: 35203P19335534 | EFTPOS Purchase WOOLWORTHS HOBART TAS | EFTPOS Purchase COLES SUPERMARKET PERTH WA | Insurance Premium AGL Policy 95909P77005685 | ATM Withdrawal WESTPAC ATM BRISBANE QLD | Subscription Spotify Monthly 82512P11540956\n",
       "\n",
       "TRANSACTION_AMOUNTS_PAID:\n",
@@ -1307,7 +1307,7 @@
       "  Ground Truth: $1488.27 | $79.00 | $850.65 | $1215.38 | $1662.22 | $342.06 | $1077.60 | $437.75 | $1724.98 | $1992.32\n",
       "\n",
       "==========================================================================================\n",
-      "📊 OVERALL F1 SCORE: 83.6%\n",
+      "📊 OVERALL F1 SCORE: 97.8%\n",
       "==========================================================================================\n"
      ]
     }
