--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c782523a28a94e16bae88350d884c611",
+       "model_id": "10ac6db7c8c446cd841dc024c1b6f687",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1059,10 +1059,10 @@
       "  03 Jun 2023 | 04 Jun 2023 | 06 Jun 2023 | 06 Jun 2023 | 07 Jun 2023 | 08 Jun 2023 | 08 Jun 2023 | 09...\n",
       "\n",
       "LINE_ITEM_DESCRIPTIONS:\n",
-      "  NOT_FOUND\n",
+      "  GROCERY MARKET SUBURB NSW AUS Card xx5678 | DEPARTMENT STORE SHOPPING DIST NS AUS Card xx5678 | CAFE...\n",
       "\n",
       "TRANSACTION_AMOUNTS_PAID:\n",
-      "  $78.90 | $345.80 | $24.50 | $31.20 | $18.95 | $95.40 | $28.60 | $89.00 | $145.50 | $567.30 | $42.85 ...\n",
+      "  -$78.90 | -$345.80 | -$24.50 | -$31.20 | -$18.95 | -$95.40 | -$28.60 | -$89.00 | -$145.50 | -$567.30...\n",
       "\n",
       "============================================================\n",
       "TRANSACTION SUMMARY\n",
@@ -1128,7 +1128,19 @@
      "text": [
       "============================================================\n",
       "DEBIT TRANSACTIONS\n",
-      "============================================================\n"
+      "============================================================\n",
+      "1. [03 Jun 2023] GROCERY MARKET SUBURB NSW AUS Card xx5678 - -$78.90\n",
+      "2. [04 Jun 2023] DEPARTMENT STORE SHOPPING DIST NS AUS Card xx5678 - -$345.80\n",
+      "3. [06 Jun 2023] CAFE CENTRAL T 54321F SUBURB AUS Card xx5678 - -$24.50\n",
+      "4. [06 Jun 2023] CAFE CENTRAL T 54321F SUBURB AUS Card xx5678 - -$31.20\n",
+      "5. [07 Jun 2023] ONLINE RETAILER.COM SYDNEY AU AUS Card xx5678 - -$18.95\n",
+      "6. [08 Jun 2023] SERVICE STATION SUBURB NS AUS Card xx5678 - -$95.40\n",
+      "7. [08 Jun 2023] SERVICE STATION SUBURB NS AUS Card xx5678 - -$28.60\n",
+      "8. [09 Jun 2023] ONLINE SUBSCRIPTION SYDNEY AU AUS Card xx5678 - -$89.00\n",
+      "9. [09 Jun 2023] ONLINE SUBSCRIPTION SYDNEY AU AUS Card xx5678 - -$145.50\n",
+      "10. [10 Jun 2023] ELECTRONICS 9876 SUBURB NSW AUS Card xx5678 - -$567.30\n",
+      "11. [12 Jun 2023] PHARMACY SERVICES MELBOURNE AUS Card xx5678 - -$42.85\n",
+      "12. [14 Jun 2023] BOOKSTORE 2345 SYDNEY AUS Card xx5678 - -$234.90\n"
      ]
     }
    ],
@@ -1187,8 +1199,8 @@
       "✅ OK     DOCUMENT_TYPE                   100.0%  100.0%  100.0%\n",
       "✅ OK     STATEMENT_DATE_RANGE            100.0%  100.0%  100.0%\n",
       "✅ OK     TRANSACTION_DATES               100.0%  100.0%  100.0%\n",
-      "❌ FAIL   LINE_ITEM_DESCRIPTIONS            0.0%    0.0%    0.0%\n",
-      "❌ FAIL   TRANSACTION_AMOUNTS_PAID          0.0%    0.0%    0.0%\n",
+      "❌ FAIL   LINE_ITEM_DESCRIPTIONS           40.0%  100.0%   25.0%\n",
+      "✅ OK     TRANSACTION_AMOUNTS_PAID        100.0%  100.0%  100.0%\n",
       "------------------------------------------------------------------------------------------\n",
       "\n",
       "📋 DETAILED VALUES:\n",
@@ -1207,15 +1219,15 @@
       "  Ground Truth: 03 Jun 2023 | 04 Jun 2023 | 06 Jun 2023 | 06 Jun 2023 | 07 Jun 2023 | 08 Jun 2023 | 08 Jun 2023 | 09 Jun 2023 | 09 Jun 2023 | 10 Jun 2023 | 12 Jun 2023 | 14 Jun 2023\n",
       "\n",
       "LINE_ITEM_DESCRIPTIONS:\n",
-      "  Extracted:    NOT_FOUND\n",
+      "  Extracted:    GROCERY MARKET SUBURB NSW AUS Card xx5678 | DEPARTMENT STORE SHOPPING DIST NS AUS Card xx5678 | CAFE CENTRAL T 54321F SUBURB AUS Card xx5678 | CAFE CENTRAL T 54321F SUBURB AUS Card xx5678 | ONLINE RETAILER.COM SYDNEY AU AUS Card xx5678 | SERVICE STATION SUBURB NS AUS Card xx5678 | SERVICE STATION SUBURB NS AUS Card xx5678 | ONLINE SUBSCRIPTION SYDNEY AU AUS Card xx5678 | ONLINE SUBSCRIPTION SYDNEY AU AUS Card xx5678 | ELECTRONICS 9876 SUBURB NSW AUS Card xx5678 | PHARMACY SERVICES MELBOURNE AUS Card xx5678 | BOOKSTORE 2345 SYDNEY AUS Card xx5678\n",
       "  Ground Truth: GROCERY MARKET SUBURB NSW AUS | DEPARTMENT STORE SHOPPING DIST NS AUS | CAFE CENTRAL T 54321F SUBURB AUS | CAFE CENTRAL T 54321F SUBURB AUS | ONLINE RETAILER.COM SYDNEY AU AUS | SERVICE STATION SUBURB NS AUS | SERVICE STATION SUBURB NS AUS | ONLINE SUBSCRIPTION SYDNEY AU AUS | ONLINE SUBSCRIPTION SYDNEY AU AUS | ELECTRONICS 9876 SUBURB NSW AUS | PHARMACY SERVICES MELBOURNE AUS | BOOKSTORE 2345 SYDNEY AUS\n",
       "\n",
       "TRANSACTION_AMOUNTS_PAID:\n",
-      "  Extracted:    $78.90 | $345.80 | $24.50 | $31.20 | $18.95 | $95.40 | $28.60 | $89.00 | $145.50 | $567.30 | $42.85 | $234.90\n",
+      "  Extracted:    -$78.90 | -$345.80 | -$24.50 | -$31.20 | -$18.95 | -$95.40 | -$28.60 | -$89.00 | -$145.50 | -$567.30 | -$42.85 | -$234.90\n",
       "  Ground Truth: -$78.90 | -$345.80 | -$24.50 | -$31.20 | -$18.95 | -$95.40 | -$28.60 | -$89.00 | -$145.50 | -$567.30 | -$42.85 | -$234.90\n",
       "\n",
       "==========================================================================================\n",
-      "📊 OVERALL F1 SCORE: 60.0%\n",
+      "📊 OVERALL F1 SCORE: 88.0%\n",
       "==========================================================================================\n"
      ]
     }
