:construction: Remote job commit 46

--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -467,7 +467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2e27745be4e40569a423ed367edf373",
+       "model_id": "55d69d734db6405dac5fe94403d98cfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1070,7 +1070,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DEBUG: field_types_from_yaml = {'monetary': ['GST_AMOUNT', 'TOTAL_AMOUNT', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'boolean': ['IS_GST_INCLUDED'], 'list': ['LINE_ITEM_DESCRIPTIONS', 'LINE_ITEM_QUANTITIES', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_DATES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'date': ['INVOICE_DATE', 'STATEMENT_DATE_RANGE', 'TRANSACTION_DATES']}\n",
+      "DEBUG: field_types_from_yaml = {'monetary': ['GST_AMOUNT', 'TOTAL_AMOUNT', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'boolean': ['IS_GST_INCLUDED'], 'list': ['LINE_ITEM_DESCRIPTIONS', 'LINE_ITEM_QUANTITIES', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_DATES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'date': ['INVOICE_DATE', 'STATEMENT_DATE_RANGE', 'TRANSACTION_DATES'], 'transaction_list': ['TRANSACTION_DATES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE']}\n",
       "DEBUG: boolean fields from YAML = ['IS_GST_INCLUDED']\n",
       "DEBUG: self.boolean_fields = ['IS_GST_INCLUDED']\n",
       "DEBUG _ensure_fields_loaded: BOOLEAN_FIELDS = ['IS_GST_INCLUDED']\n",
@@ -1092,7 +1092,7 @@
       "✅ OK     STATEMENT_DATE_RANGE            100.0%  100.0%  100.0%\n",
       "✅ OK     TRANSACTION_DATES               100.0%  100.0%  100.0%\n",
       "⚠️ PART  LINE_ITEM_DESCRIPTIONS           92.9%  100.0%   86.7%\n",
-      "❌ FAIL   TRANSACTION_AMOUNTS_PAID          0.0%    0.0%    0.0%\n",
+      "✅ OK     TRANSACTION_AMOUNTS_PAID        100.0%  100.0%  100.0%\n",
       "------------------------------------------------------------------------------------------\n",
       "\n",
       "📋 DETAILED VALUES:\n",
@@ -1119,7 +1119,7 @@
       "  Ground Truth: $178.50 | $245.00 | $89.95 | $34.50 | $67.00 | $145.80 | $450.00 | $124.00 | $78.90 | $56.40 | $1456.80 | $67.75 | $89.25 | $45.80 | $234.90\n",
       "\n",
       "==========================================================================================\n",
-      "📊 OVERALL F1 SCORE: 78.6%\n",
+      "📊 OVERALL F1 SCORE: 98.6%\n",
       "==========================================================================================\n"
      ]
     }
@@ -1219,184 +1219,6 @@
     "except FileNotFoundError:\n",
     "    print(f\"Ground truth file not found: {GROUND_TRUTH_PATH}\")\n",
     "    print(\"Skipping evaluation.\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cell-15",
-   "metadata": {},
-   "source": [
-    "## View Raw Responses (Debug)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "cell-16",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "============================================================\n",
-      "RAW TURN 0 RESPONSE (Header Detection)\n",
-      "============================================================\n",
-      "**Column Header Names:**\n",
-      "\n",
-      "* **Date**\n",
-      "* **Transaction**\n",
-      "* **Debit**\n",
-      "* **Credit**\n",
-      "\n",
-      "============================================================\n",
-      "RAW TURN 1 RESPONSE (Extraction)\n",
-      "============================================================\n",
-      "**Transaction List**\n",
-      "\n",
-      "1. **20 May**\n",
-      "   - Transaction: Direct Debit 987654 Loan Repayment\n",
-      "   - Debit: 178.50\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "2. **21 May**\n",
-      "   - Transaction: RETAIL STORE SUBURB AU\n",
-      "   - Debit: 245.00\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "3. **21 May**\n",
-      "   - Transaction: SUPERMARKET SHOPPING SUBURB AU\n",
-      "   - Debit: 89.95\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "4. **21 May**\n",
-      "   - Transaction: SHOPPING SUBURB SUBURB AU\n",
-      "   - Debit: 34.50\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "5. **21 May**\n",
-      "   - Transaction: SHOPPING SUBURB SUBURB AU\n",
-      "   - Debit: 67.00\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "6. **21 May**\n",
-      "   - Transaction: Store RSL Suburb0 AU\n",
-      "   - Debit: 145.80\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "7. **21 May**\n",
-      "   - Transaction: Cash Out $89.00\n",
-      "   - Debit: NOT_FOUND\n",
-      "   - Credit: 89.00\n",
-      "\n",
-      "8. **21 May**\n",
-      "   - Transaction: Transfer To financially sorted\n",
-      "   - Debit: 450.00\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "9. **22 May**\n",
-      "   - Transaction: GROCERY STORE SUBURB AU\n",
-      "   - Debit: 124.00\n",
-      "   - Credit: NOT_FOUND\n",
-      "\n",
-      "10. **22 May**\n",
-      "    - Transaction: PETROL STATION SUBURB VIC AU\n",
-      "    - Debit: 78.90\n",
-      "    - Credit: NOT_FOUND\n",
-      "\n",
-      "11. **22 May**\n",
-      "    - Transaction: RETAIL STORES SUBURB VIC AU\n",
-      "    - Debit: 56.40\n",
-      "    - Credit: NOT_FOUND\n",
-      "\n",
-      "12. **23 May**\n",
-      "    - Transaction: DEPARTMENT STORE PTY LTD SUBURB VIC AU\n",
-      "    - Debit: 1,456.80\n",
-      "    - Credit: NOT_FOUND\n",
-      "\n",
-      "13. **23 May**\n",
-      "    - Transaction: RETAIL STORES EASTLINK VIC SUBURB AU\n",
-      "    - Debit: 67.75\n",
-      "    - Credit: NOT_FOUND\n",
-      "\n",
-      "14. **23 May**\n",
-      "    - Transaction: RETAIL STORE PTY LTD Suburb VICAU\n",
-      "    - Debit: 89.25\n",
-      "    - Credit: NOT_FOUND\n",
-      "\n",
-      "15. **23 May**\n",
-      "    - Transaction: RETAIL STORE PTY LTD Suburb VICAU\n",
-      "    - Debit: 45.80\n",
-      "    - Credit: NOT_FOUND\n",
-      "\n",
-      "16. **23 May**\n",
-      "    - Transaction: Direct Credit 876543 Wage Payment\n",
-      "    - Debit: NOT_FOUND\n",
-      "    - Credit: 3,450.00\n",
-      "\n",
-      "17. **24 May**\n",
-      "    - Transaction: Afterpay afterpay.com AU AUS\n",
-      "    - Debit: 234.90\n",
-      "    - Credit: NOT_FOUND\n",
-      "\n",
-      "============================================================\n",
-      "DEBUG: TURN 1 PROMPT THAT WAS SENT\n",
-      "============================================================\n",
-      "List all the balances in the None column, including:\n",
-      "- Date from the Date Header of the balance\n",
-      "- Transaction\n",
-      "- Debit Amount or \"NOT_FOUND\"\n",
-      "- Credit Amount or \"NOT_FOUND\"\n",
-      "\n",
-      "Format each balance entry like this:\n",
-      "1. **[Date]**\n",
-      "   - Transaction: [ALL rows of text for this transaction]\n",
-      "   - Debit: [amount or NOT_FOUND]\n",
-      "   - Credit: [amount or NOT_FOUND]\n",
-      "   - None: [balance amount]\n",
-      "\n",
-      "CRITICAL RULES:\n",
-      "1. List EVERY balance entry in order from top to bottom\n",
-      "2. EVERY balance entry has a date, either on the same row, or above\n",
-      "3. Include the FULL Transaction text - capture ALL rows that belong to this transaction, not abbreviated\n",
-      "4. If amount is in Debit column, put it there and use NOT_FOUND for Credit\n",
-      "5. If amount is in Credit column, put it there and use NOT_FOUND for Debit\n",
-      "6. Do NOT skip any transactions\n",
-      "\n",
-      "============================================================\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Cell 9: View raw LLM responses (for debugging)\n",
-    "print(\"=\"*60)\n",
-    "print(\"RAW TURN 0 RESPONSE (Header Detection)\")\n",
-    "print(\"=\"*60)\n",
-    "print(result.raw_responses.get(\"turn0\", \"N/A\"))\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"RAW TURN 1 RESPONSE (Extraction)\")\n",
-    "print(\"=\"*60)\n",
-    "print(result.raw_responses.get(\"turn1\", \"N/A\")[:10000])\n",
-    "if len(result.raw_responses.get(\"turn1\", \"\")) > 10000:\n",
-    "    print(\"... [truncated]\")\n",
-    "\n",
-    "# Debug: Show the exact prompt that was sent\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"DEBUG: TURN 1 PROMPT THAT WAS SENT\")\n",
-    "print(\"=\"*60)\n",
-    "import yaml\n",
-    "with open(\"config/bank_prompts.yaml\") as f:\n",
-    "    prompts_config = yaml.safe_load(f)\n",
-    "template = prompts_config[\"prompts\"][\"turn1_balance_extraction\"][\"template\"]\n",
-    "actual_prompt = template.format(\n",
-    "    balance_col=result.column_mapping.balance,\n",
-    "    desc_col=result.column_mapping.description or \"Description\",\n",
-    "    debit_col=result.column_mapping.debit or \"Debit\",\n",
-    "    credit_col=result.column_mapping.credit or \"Credit\",\n",
-    ")\n",
-    "print(actual_prompt)\n",
-    "print(\"=\"*60)"
    ]
   },
   {
