Fix comment for ENABLE_MATH_ENHANCEMENT to clarify it enables mathematical correction for bank statements

--- a/llama_batch_v2.ipynb
+++ b/llama_batch_v2.ipynb
@@ -217,7 +217,7 @@
     "    'OUTPUT_BASE': f'{base_data_path}/LMM_POC/output',\n",
     "    'MAX_IMAGES': None,  # None for all, or set limit\n",
     "    'DOCUMENT_TYPES': None,  # None for all, or ['invoice', 'receipt']\n",
-    "    'ENABLE_MATH_ENHANCEMENT': True,  # Disable mathematical correction for bank statements\n",
+    "    'ENABLE_MATH_ENHANCEMENT': True,  # Enable mathematical correction for bank statements\n",
     "    \n",
     "    # Inference and evaluation mode\n",
     "    'INFERENCE_ONLY': False,  # Default: True (inference-only mode)\n",
