Add synthetic evaluation data and update notebook paths
- Added multiple synthetic images for evaluation in the `evaluation_data/synthetic` directory.
- Introduced a new ground truth CSV file `ground_truth_synthetic.csv` containing details for synthetic images.
- Updated paths in `llama_batch_v2.ipynb` to point to the new synthetic data directory and ground truth file.
- Increased `MAX_NEW_TOKENS` in the notebook for L40S optimization settings.

--- a/llama_batch_v2.ipynb
+++ b/llama_batch_v2.ipynb
@@ -211,8 +211,8 @@
     "    'MODEL_PATH': \"/home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct\",\n",
     "\n",
     "    # Batch settings - Using base path for consistency\n",
-    "    'DATA_DIR': f'{base_data_path}/evaluation_data',\n",
-    "    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/ground_truth.csv',\n",
+    "    'DATA_DIR': f'{base_data_path}/evaluation_data/synthetic',\n",
+    "    'GROUND_TRUTH': f'{base_data_path}/evaluation_data/synthetic/ground_truth_synthetic.csv',\n",
     "    # 'OUTPUT_BASE': f'{base_data_path}/output',\n",
     "    'OUTPUT_BASE': f'{base_data_path}/LMM_POC/output',\n",
     "    'MAX_IMAGES': None,  # None for all, or set limit\n",
@@ -229,7 +229,7 @@
     "    # L40S optimization settings\n",
     "    'USE_QUANTIZATION': False,\n",
     "    'DEVICE_MAP': 'auto',\n",
-    "    'MAX_NEW_TOKENS': 2000,  # Reduced for L40S (was 4000 for V100)\n",
+    "    'MAX_NEW_TOKENS': 3000,  # Reduced for L40S (was 4000 for V100)\n",
     "    'TORCH_DTYPE': 'bfloat16',\n",
     "    'LOW_CPU_MEM_USAGE': True,\n",
     "    \n",
