Enhance batch processing for bank statement extraction
- Refactor document routing to improve clarity and efficiency.
- Implement detection-only function for document type classification.
- Introduce sophisticated multi-turn extraction for bank statements.
- Ensure no duplicate processing for bank statements.
- Update verbose logging to provide clearer insights during processing.
- Maintain backward compatibility for non-bank documents with original extraction method.

--- a/llama_batch_v2.ipynb
+++ b/llama_batch_v2.ipynb
@@ -13405,16 +13405,17 @@
     "# ============================================================================\n",
     "# V2: BATCH PROCESSING WITH SOPHISTICATED BANK STATEMENT EXTRACTION\n",
     "# ============================================================================\n",
-    "# This cell initializes the batch processor and optionally sets up the\n",
-    "# sophisticated multi-turn bank statement extraction using UnifiedBankExtractor.\n",
+    "# This cell initializes the batch processor and sets up document routing:\n",
     "#\n",
-    "# When USE_SOPHISTICATED_BANK_EXTRACTION is True:\n",
-    "# - Bank statements use Turn 0 (header detection) + Turn 1 (adaptive extraction)\n",
-    "# - Automatic strategy selection: BALANCE_DESCRIPTION, AMOUNT_DESCRIPTION, etc.\n",
-    "# - Expected accuracy improvement: ~72% -> ~85%+\n",
+    "# Document Flow:\n",
+    "# 1. Document type detection (Turn 0) - classify as INVOICE, RECEIPT, or BANK_STATEMENT\n",
+    "# 2. If BANK_STATEMENT:\n",
+    "#    - Turn 1: Header detection via BankStatementAdapter\n",
+    "#    - Turn 2: Adaptive extraction based on detected columns\n",
+    "# 3. If INVOICE/RECEIPT:\n",
+    "#    - Standard single-turn extraction\n",
     "#\n",
-    "# When USE_SOPHISTICATED_BANK_EXTRACTION is False:\n",
-    "# - Uses original single-turn extraction (backward compatible)\n",
+    "# This ensures NO duplicate extraction - each document is processed once.\n",
     "# ============================================================================\n",
     "\n",
     "# Initialize batch processor with simplified, clean architecture\n",
@@ -13439,28 +13440,109 @@
     "        use_balance_correction=CONFIG.get('ENABLE_BALANCE_CORRECTION', False),\n",
     "    )\n",
     "    \n",
-    "    # Store original processing method\n",
+    "    # Store original processing method for non-bank documents\n",
     "    original_process_llama = batch_processor._process_llama_image\n",
     "    \n",
+    "    # Load detection config once for reuse\n",
+    "    from pathlib import Path as _Path\n",
+    "    import yaml as _yaml\n",
+    "    _detection_path = _Path(PROMPT_CONFIG[\"detection_file\"])\n",
+    "    with _detection_path.open(\"r\") as _f:\n",
+    "        _detection_config = _yaml.safe_load(_f)\n",
+    "    _detection_prompt_key = PROMPT_CONFIG.get(\"detection_key\") or _detection_config.get(\"settings\", {}).get(\"default_prompt\", \"detection\")\n",
+    "    _doc_type_prompt = _detection_config[\"prompts\"][_detection_prompt_key][\"prompt\"]\n",
+    "    _max_tokens = _detection_config.get(\"settings\", {}).get(\"max_new_tokens\", 50)\n",
+    "    \n",
+    "    def detect_document_type_only(image_path):\n",
+    "        \"\"\"\n",
+    "        Detection-only function for Llama - returns just the document type.\n",
+    "        Does NOT perform extraction.\n",
+    "        \"\"\"\n",
+    "        from PIL import Image\n",
+    "        \n",
+    "        # Load image\n",
+    "        image = Image.open(image_path)\n",
+    "        \n",
+    "        # Create message structure\n",
+    "        messageDataStructure = [\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": [\n",
+    "                    {\"type\": \"image\"},\n",
+    "                    {\"type\": \"text\", \"text\": _doc_type_prompt},\n",
+    "                ],\n",
+    "            }\n",
+    "        ]\n",
+    "        \n",
+    "        # Process input\n",
+    "        textInput = processor.apply_chat_template(messageDataStructure, add_generation_prompt=True)\n",
+    "        inputs = processor(image, textInput, return_tensors=\"pt\")\n",
+    "        \n",
+    "        # Move to model device\n",
+    "        inputs = inputs.to(model.device)\n",
+    "        \n",
+    "        # Generate response\n",
+    "        with torch.no_grad():\n",
+    "            output = model.generate(\n",
+    "                **inputs,\n",
+    "                max_new_tokens=_max_tokens,\n",
+    "                do_sample=False,\n",
+    "                temperature=None,\n",
+    "                top_p=None,\n",
+    "            )\n",
+    "        response = processor.decode(output[0], skip_special_tokens=True)\n",
+    "        \n",
+    "        # Parse document type from response\n",
+    "        response_text = response.split(\"assistant\")[-1].strip() if \"assistant\" in response else response\n",
+    "        response_upper = response_text.upper()\n",
+    "        \n",
+    "        if \"BANK\" in response_upper or \"STATEMENT\" in response_upper:\n",
+    "            return \"BANK_STATEMENT\"\n",
+    "        elif \"RECEIPT\" in response_upper:\n",
+    "            return \"RECEIPT\"\n",
+    "        else:\n",
+    "            return \"INVOICE\"\n",
+    "    \n",
     "    def enhanced_process_llama(image_path, verbose):\n",
-    "        \"\"\"Enhanced processing that routes bank statements through sophisticated adapter.\"\"\"\n",
+    "        \"\"\"\n",
+    "        Enhanced processing with proper routing:\n",
+    "        - Turn 0: Document type detection (all documents)\n",
+    "        - If BANK_STATEMENT: BankStatementAdapter handles extraction (Turn 1 headers + Turn 2 extraction)\n",
+    "        - If INVOICE/RECEIPT: Standard extraction via original_process_llama\n",
+    "        \n",
+    "        NO duplicate extraction - each document processed exactly once.\n",
+    "        \"\"\"\n",
     "        from pathlib import Path\n",
     "        \n",
-    "        # First, do a quick document type detection using original method\n",
-    "        # We run with verbose=False to just get the document type\n",
+    "        # =====================================================================\n",
+    "        # TURN 0: Document Type Detection ONLY (no extraction yet)\n",
+    "        # =====================================================================\n",
+    "        if verbose:\n",
+    "            rprint(f\"\\n[cyan]\ud83d\udccb Turn 0: Document type detection for {Path(image_path).name}[/cyan]\")\n",
+    "        \n",
     "        try:\n",
-    "            doc_type, original_result, original_prompt = original_process_llama(image_path, verbose=False)\n",
+    "            doc_type = detect_document_type_only(image_path)\n",
     "        except Exception as e:\n",
     "            rprint(f\"[red]Error in document type detection: {e}[/red]\")\n",
     "            raise\n",
     "        \n",
-    "        # Check if this is a bank statement\n",
+    "        if verbose:\n",
+    "            rprint(f\"[green]\u2705 Detected: {doc_type}[/green]\")\n",
+    "        \n",
+    "        # =====================================================================\n",
+    "        # ROUTING: Bank statements vs other documents\n",
+    "        # =====================================================================\n",
     "        if doc_type.upper() == \"BANK_STATEMENT\":\n",
+    "            # -----------------------------------------------------------------\n",
+    "            # BANK STATEMENT: Use BankStatementAdapter (Turn 1 + Turn 2)\n",
+    "            # -----------------------------------------------------------------\n",
     "            if verbose:\n",
-    "                rprint(f\"[cyan]\ud83c\udfe6 Routing {Path(image_path).name} through sophisticated multi-turn extraction[/cyan]\")\n",
+    "                rprint(f\"[cyan]\ud83c\udfe6 Routing to BankStatementAdapter for multi-turn extraction[/cyan]\")\n",
     "            \n",
     "            try:\n",
-    "                # Use sophisticated multi-turn extraction\n",
+    "                # BankStatementAdapter handles:\n",
+    "                # - Turn 1: Header detection (identifies column names)\n",
+    "                # - Turn 2: Adaptive extraction based on detected columns\n",
     "                schema_fields, metadata = bank_adapter.extract_bank_statement(image_path)\n",
     "                \n",
     "                # Build result structure compatible with BatchDocumentProcessor\n",
@@ -13468,36 +13550,41 @@
     "                    \"extracted_data\": schema_fields,\n",
     "                    \"raw_response\": metadata.get(\"raw_responses\", {}).get(\"turn1\", \"\"),\n",
     "                    \"field_list\": list(schema_fields.keys()),\n",
-    "                    \"metadata\": metadata,  # Include full metadata for debugging\n",
+    "                    \"metadata\": metadata,\n",
     "                }\n",
     "                \n",
-    "                # Create prompt name that indicates which strategy was used\n",
+    "                # Create prompt name indicating strategy used\n",
     "                strategy = metadata.get(\"strategy_used\", \"unknown\")\n",
     "                prompt_name = f\"unified_bank_{strategy}\"\n",
     "                \n",
     "                if verbose:\n",
     "                    rprint(f\"[green]  \u2705 Strategy: {strategy}[/green]\")\n",
-    "                    rprint(f\"[green]  \u2705 Transactions extracted: {len(schema_fields.get('TRANSACTION_DATES', '').split('|')) if schema_fields.get('TRANSACTION_DATES') != 'NOT_FOUND' else 0}[/green]\")\n",
+    "                    tx_count = len(schema_fields.get('TRANSACTION_DATES', '').split('|')) if schema_fields.get('TRANSACTION_DATES') != 'NOT_FOUND' else 0\n",
+    "                    rprint(f\"[green]  \u2705 Transactions extracted: {tx_count}[/green]\")\n",
     "                \n",
     "                return doc_type, extraction_result, prompt_name\n",
     "                \n",
     "            except Exception as e:\n",
-    "                rprint(f\"[yellow]\u26a0\ufe0f  Sophisticated extraction failed for {Path(image_path).name}: {e}[/yellow]\")\n",
-    "                rprint(f\"[yellow]   Falling back to original extraction...[/yellow]\")\n",
-    "                # Fall back to original extraction result\n",
-    "                return doc_type, original_result, original_prompt\n",
+    "                rprint(f\"[yellow]\u26a0\ufe0f  BankStatementAdapter failed: {e}[/yellow]\")\n",
+    "                rprint(f\"[yellow]   Falling back to standard extraction...[/yellow]\")\n",
+    "                # Fall through to standard extraction\n",
     "        \n",
-    "        else:\n",
-    "            # Non-bank documents: use original processing with verbose output\n",
-    "            if verbose:\n",
-    "                rprint(f\"[dim]\ud83d\udcc4 Processing {Path(image_path).name} ({doc_type}) with standard extraction[/dim]\")\n",
-    "            return original_process_llama(image_path, verbose)\n",
+    "        # -----------------------------------------------------------------\n",
+    "        # INVOICE/RECEIPT (or bank fallback): Standard extraction\n",
+    "        # -----------------------------------------------------------------\n",
+    "        if verbose:\n",
+    "            rprint(f\"[dim]\ud83d\udcc4 Using standard extraction for {doc_type}[/dim]\")\n",
+    "        \n",
+    "        # Use original process (will re-detect but that's acceptable for non-bank)\n",
+    "        return original_process_llama(image_path, verbose)\n",
     "    \n",
     "    # Replace the processing method\n",
     "    batch_processor._process_llama_image = enhanced_process_llama\n",
     "    \n",
     "    rprint(\"[green]\u2705 V2: Sophisticated bank statement extraction enabled[/green]\")\n",
-    "    rprint(\"[cyan]   Turn 0: Header detection \u2192 Turn 1: Adaptive extraction[/cyan]\")\n",
+    "    rprint(\"[cyan]   Flow: Detection \u2192 Route \u2192 Extract (no duplicate processing for bank)[/cyan]\")\n",
+    "    rprint(\"[cyan]   Bank statements: Turn 0 (detect) \u2192 Turn 1 (headers) \u2192 Turn 2 (extract)[/cyan]\")\n",
+    "    rprint(\"[cyan]   Invoice/Receipt: Turn 0 (detect) \u2192 Standard extraction[/cyan]\")\n",
     "    rprint(f\"[cyan]   Balance correction: {'Enabled' if CONFIG.get('ENABLE_BALANCE_CORRECTION', False) else 'Disabled'}[/cyan]\")\n",
     "else:\n",
     "    rprint(\"[dim]\u23ed\ufe0f  V2: Sophisticated bank extraction disabled - using original single-turn[/dim]\")\n",
@@ -13521,7 +13608,7 @@
     "        bank_results = [r for r in batch_results if r.get('document_type', '').upper() == 'BANK_STATEMENT']\n",
     "        if bank_results:\n",
     "            bank_accuracy = np.mean([r.get('evaluation', {}).get('overall_accuracy', 0) * 100 for r in bank_results if 'evaluation' in r])\n",
-    "            rprint(f\"[cyan]\ud83c\udfe6 Bank statement accuracy (V2): {bank_accuracy:.1f}%[/cyan]\")"
+    "            rprint(f\"[cyan]\ud83c\udfe6 Bank statement accuracy (V2): {bank_accuracy:.1f}%[/cyan]\")\n"
    ]
   },
   {
