Add debug output for document type detection to improve response clarity

--- a/llama_batch_v2.ipynb
+++ b/llama_batch_v2.ipynb
@@ -2123,7 +2123,11 @@
     "        response_text = response.split(\"assistant\")[-1].strip() if \"assistant\" in response else response\n",
     "        response_upper = response_text.upper()\n",
     "        \n",
-    "        if \"BANK\" in response_upper or \"STATEMENT\" in response_upper:\n",
+    "        # Debug: Show what the model returned\n",
+    "        print(f\"  [DEBUG] Detection response: {response_text[:100]}...\")\n",
+    "        \n",
+    "        # More specific matching - avoid false positives from \"STATEMENT\" in other contexts\n",
+    "        if \"BANK STATEMENT\" in response_upper or \"BANK_STATEMENT\" in response_upper:\n",
     "            return \"BANK_STATEMENT\"\n",
     "        elif \"RECEIPT\" in response_upper:\n",
     "            return \"RECEIPT\"\n",
