--- a/model_comparison_reporter.ipynb
+++ b/model_comparison_reporter.ipynb
@@ -6167,9 +6167,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (unified_vision_processor)",
+   "display_name": "du",
    "language": "python",
-   "name": "unified_vision_processor"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6181,7 +6181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
