--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,12 @@
     "CURRENT_MODEL_CSV = Path(\"../output/current_model_accuracy.csv\")\n",
     "\n",
     "# Model names for display\n",
-    "CURRENT_MODEL_NAME = \"InternVL3-8B\"\n",
-    "COMPETING_MODEL_NAME = \"Competing Model\"\n",
+    "# CURRENT_MODEL_NAME = \"InternVL3-8B\"\n",
+    "# CURRENT_MODEL_NAME = \"InternVL3-2B\"\n",
+    "# CURRENT_MODEL_NAME = \"InternVL3.5-8B\"\n",
+    "CURRENT_MODEL_NAME = \"Llama-3.2-11B\"\n",
+    "# CURRENT_MODEL_NAME = \"Llama-4-Scout\"\n",
+    "COMPETING_MODEL_NAME = \"LayoutLM\"\n",
     "\n",
     "# Output directory for comparison results\n",
     "OUTPUT_DIR = Path(\"../output/comparison\")\n",
