--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -1903,9 +1903,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (LMM_POC)",
+   "display_name": "du",
    "language": "python",
-   "name": "unified_vision_processor"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1917,7 +1917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
