Refactor compute_per_field_metrics to use calculate_field_accuracy_f1 for F1 scoring
- Updated the function to compute precision, recall, and F1 for each field using calculate_field_accuracy_f1.
- Removed manual calculations for precision, recall, and F1, replacing them with aggregated metrics from the new function.
- Ensured consistent handling of 'NOT_FOUND' values and improved the overall clarity of the metric calculations.

--- a/notebooks_v2/model_comparison_reporter_v2.ipynb
+++ b/notebooks_v2/model_comparison_reporter_v2.ipynb
@@ -4887,11 +4887,10 @@
     "\n",
     "def compute_per_field_metrics(df_batch: pd.DataFrame, ground_truth_df: pd.DataFrame, model_name: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Compute precision, recall, F1 for each field using sklearn.\n",
+    "    Compute precision, recall, F1 for each field using calculate_field_accuracy_f1.\n",
     "\n",
-    "    Treats field extraction as a multi-class classification problem where:\n",
-    "    - Each unique field value is a class\n",
-    "    - 'NOT_FOUND' is treated as a special class\n",
+    "    Uses the SAME F1 calculation as the rest of the notebook - proper field-type-aware\n",
+    "    F1 scoring with consistent TP/FP/FN counting.\n",
     "\n",
     "    Args:\n",
     "        df_batch: Batch results DataFrame with extracted field values\n",
@@ -4899,8 +4898,12 @@
     "        model_name: Name of the model\n",
     "\n",
     "    Returns:\n",
-    "        DataFrame with columns: field, precision, recall, f1, support, model\n",
+    "        DataFrame with columns: field, precision, recall, f1_score, accuracy, support, model\n",
     "    \"\"\"\n",
+    "    import sys\n",
+    "    sys.path.insert(0, str(PROJECT_ROOT))\n",
+    "    from common.evaluation_metrics import calculate_field_accuracy_f1\n",
+    "\n",
     "    metrics_data = []\n",
     "\n",
     "    for field in FIELD_COLUMNS:\n",
@@ -4908,7 +4911,6 @@
     "            continue\n",
     "\n",
     "        # Normalize image names (strip extensions) for matching\n",
-    "        # Batch has extensions (.jpeg, .png), ground truth does not\n",
     "        if 'image_stem' not in df_batch.columns:\n",
     "            df_batch['image_stem'] = df_batch['image_file'].apply(lambda x: Path(x).stem)\n",
     "        if 'image_stem' not in ground_truth_df.columns:\n",
@@ -4925,47 +4927,37 @@
     "        pred_col = f'{field}_pred' if f'{field}_pred' in merged.columns else field\n",
     "        true_col = f'{field}_true' if f'{field}_true' in merged.columns else field\n",
     "\n",
-    "        # Clean and normalize values\n",
-    "        y_true = merged[true_col].fillna('NOT_FOUND').astype(str).str.strip().str.upper()\n",
-    "        y_pred = merged[pred_col].fillna('NOT_FOUND').astype(str).str.strip().str.upper()\n",
-    "\n",
-    "        # Skip if no valid data\n",
-    "        if len(y_true) == 0:\n",
+    "        if len(merged) == 0:\n",
     "            continue\n",
     "\n",
-    "        # Compute binary metrics: correct vs incorrect (treating NOT_FOUND as incorrect)\n",
-    "        y_true_binary = y_true\n",
-    "        y_pred_binary = y_pred\n",
+    "        # Collect F1 metrics from each row using calculate_field_accuracy_f1\n",
+    "        f1_scores = []\n",
+    "        precision_scores = []\n",
+    "        recall_scores = []\n",
     "\n",
-    "        # Calculate exact match accuracy\n",
-    "        matches = (y_true_binary == y_pred_binary).sum()\n",
-    "        total = len(y_true_binary)\n",
-    "        accuracy = matches / total if total > 0 else 0\n",
+    "        for _, row in merged.iterrows():\n",
+    "            pred_val = str(row[pred_col]) if pd.notna(row[pred_col]) else 'NOT_FOUND'\n",
+    "            true_val = str(row[true_col]) if pd.notna(row[true_col]) else 'NOT_FOUND'\n",
     "\n",
-    "        # For precision/recall, we treat it as binary: correct extraction vs not\n",
-    "        # This is more meaningful than multi-class for field extraction\n",
-    "        correct_mask = (y_pred_binary == y_true_binary) & (y_pred_binary != 'NOT_FOUND')\n",
+    "            # Use calculate_field_accuracy_f1 for proper F1 metrics\n",
+    "            metrics = calculate_field_accuracy_f1(pred_val, true_val, field, debug=False)\n",
     "\n",
-    "        # True positives: predicted correctly (and not NOT_FOUND)\n",
-    "        tp = correct_mask.sum()\n",
+    "            f1_scores.append(metrics['f1_score'])\n",
+    "            precision_scores.append(metrics['precision'])\n",
+    "            recall_scores.append(metrics['recall'])\n",
     "\n",
-    "        # False positives: predicted incorrectly (but not NOT_FOUND)\n",
-    "        fp = ((y_pred_binary != y_true_binary) & (y_pred_binary != 'NOT_FOUND')).sum()\n",
-    "\n",
-    "        # False negatives: failed to extract (predicted NOT_FOUND when ground truth exists)\n",
-    "        fn = ((y_pred_binary == 'NOT_FOUND') & (y_true_binary != 'NOT_FOUND')).sum()\n",
-    "\n",
-    "        # Calculate metrics\n",
-    "        precision = tp / (tp + fp) if (tp + fp) > 0 else 0\n",
-    "        recall = tp / (tp + fn) if (tp + fn) > 0 else 0\n",
-    "        f1 = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
+    "        # Average metrics across all documents for this field\n",
+    "        total = len(f1_scores)\n",
+    "        avg_f1 = sum(f1_scores) / total if total > 0 else 0\n",
+    "        avg_precision = sum(precision_scores) / total if total > 0 else 0\n",
+    "        avg_recall = sum(recall_scores) / total if total > 0 else 0\n",
     "\n",
     "        metrics_data.append({\n",
     "            'field': field,\n",
-    "            'precision': precision,\n",
-    "            'recall': recall,\n",
-    "            'f1_score': f1,\n",
-    "            'accuracy': accuracy,\n",
+    "            'precision': avg_precision,\n",
+    "            'recall': avg_recall,\n",
+    "            'f1_score': avg_f1,\n",
+    "            'accuracy': avg_f1,  # Use F1 as accuracy for consistency\n",
     "            'support': total,\n",
     "            'model': model_name\n",
     "        })\n",
